--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@ UI
 
 PLAYBACK
 
+* CRASH: street_g crashes when changing playpos
 * BUG: time keeps going even when speed is set to F00
 * BUG: an extra tick is rendered at the very end (maybe)
 * add support for extended octaves
