Add keyboard shortcuts: * Jump to first song pos (G key) * Jump to last song pos (Shift+G key) * Toggle channel mute state for channels 6-10 (6-9 & 0 keys) * Unmute all channels (Shift+U key)

--- a/TODO
+++ b/TODO
@@ -31,6 +31,8 @@ OTHER
   * all command line options
   * theme config
 
+* ADD TESTIMONIALS TO README
+
 
 Notes about the test modules
 ----------------------------
@@ -52,5 +54,7 @@ intro & fx processing during pattern delay. sample swap at the very end.
 living insanity - lots of delay note and retrigger note commands
 
 kaviar - the intro turns the filter on
+
+
 
 
