--- a/TODO
+++ b/TODO
@@ -32,3 +32,10 @@ kaviar - the intro turns the filter on
 
 melon - nested pattern loops at songpos 40
 
+
+
+BUGS
+----
+
+butterfly-syndrome:
+    pos 8, row 24: slap bass sounds weird (should fade in from zero volume?)
